# fix_qtpy_rp2040

./: CMakeLists.txt  README.md  fix.c  fix.uf2
